--- a/GT/index.html
+++ b/GT/index.html
@@ -836,7 +836,11 @@
                             "featureType": "all",
                             "elementType": "labels.text.fill",
                             "stylers": [{
-                                "color": "#6c747d"
+                                "saturation": 36
+                            }, {
+                                "color": "#000000"
+                            }, {
+                                "lightness": 40
                             }]
                         }, {
                             "featureType": "all",
@@ -844,11 +848,9 @@
                             "stylers": [{
                                 "visibility": "on"
                             }, {
-                                "color": "#13263c"
+                                "color": "#000000"
                             }, {
-                                "weight": 2
-                            }, {
-                                "gamma": "1"
+                                "lightness": 16
                             }]
                         }, {
                             "featureType": "all",
@@ -858,55 +860,87 @@
                             }]
                         }, {
                             "featureType": "administrative",
-                            "elementType": "geometry",
+                            "elementType": "geometry.fill",
                             "stylers": [{
-                                "weight": 0.6
+                                "color": "#000000"
                             }, {
-                                "color": "#223347"
+                                "lightness": 20
+                            }]
+                        }, {
+                            "featureType": "administrative",
+                            "elementType": "geometry.stroke",
+                            "stylers": [{
+                                "color": "#000000"
                             }, {
-                                "gamma": "0"
+                                "lightness": 17
+                            }, {
+                                "weight": 1.2
                             }]
                         }, {
                             "featureType": "landscape",
                             "elementType": "geometry",
                             "stylers": [{
-                                "color": "#223347"
+                                "color": "#000000"
                             }, {
-                                "gamma": "1"
-                            }, {
-                                "weight": "10"
+                                "lightness": 20
                             }]
                         }, {
                             "featureType": "poi",
                             "elementType": "geometry",
                             "stylers": [{
-                                "color": "#2f3f51"
-                            }]
-                        }, {
-                            "featureType": "poi.park",
-                            "elementType": "geometry",
-                            "stylers": [{
-                                "color": "#283b51"
-                            }]
-                        }, {
-                            "featureType": "road",
-                            "elementType": "geometry",
-                            "stylers": [{
-                                "color": "#182b40"
+                                "color": "#000000"
                             }, {
-                                "lightness": "0"
+                                "lightness": 21
+                            }]
+                        }, {
+                            "featureType": "road.highway",
+                            "elementType": "geometry.fill",
+                            "stylers": [{
+                                "color": "#000000"
+                            }, {
+                                "lightness": 17
+                            }]
+                        }, {
+                            "featureType": "road.highway",
+                            "elementType": "geometry.stroke",
+                            "stylers": [{
+                                "color": "#000000"
+                            }, {
+                                "lightness": 29
+                            }, {
+                                "weight": 0.2
+                            }]
+                        }, {
+                            "featureType": "road.arterial",
+                            "elementType": "geometry",
+                            "stylers": [{
+                                "color": "#000000"
+                            }, {
+                                "lightness": 18
+                            }]
+                        }, {
+                            "featureType": "road.local",
+                            "elementType": "geometry",
+                            "stylers": [{
+                                "color": "#000000"
+                            }, {
+                                "lightness": 16
                             }]
                         }, {
                             "featureType": "transit",
                             "elementType": "geometry",
                             "stylers": [{
-                                "color": "#304358"
+                                "color": "#000000"
+                            }, {
+                                "lightness": 19
                             }]
                         }, {
                             "featureType": "water",
                             "elementType": "geometry",
                             "stylers": [{
-                                "color": "#0e2239"
+                                "color": "#000000"
+                            }, {
+                                "lightness": 17
                             }]
                         }]
                     });
@@ -1001,19 +1035,37 @@
             </div>
         </div>
 
-    </div>
 
+        <nav class="nav nav_active1">
+            <div class="position-relative w-100 h-100">
+                <div class="nav__bg">
+                    <video class="nav__video" autoplay="autoplay" loop="loop" muted="muted" poster="img/mainBg.jpg">
+                        <!-- <source src="video/duel.ogv" type='video/ogg; codecs="theora, vorbis"'> -->
+                        <source src="img/video.mp4" type='video/mp4;'>
+                        <!-- <source src="video/duel.webm" type='video/webm; codecs="vp8, vorbis"'> -->
+                    </video>
+                </div>
+                <div class="nav__content">
+                    <ul class="nav__list">
+                        <li class="nav__item">
+                            <a href="" class="nav__link">О компании</a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="" class="nav__link">Услуги</a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="" class="nav__link">Проекты/a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+            
+    </div>
+    </nav>
+
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js" integrity="sha512-Eak/29OTpb36LLo2r47IpVzPBLXnAMPAVypbSZiZ4Qkf8p/7S/XRG5xp7OKWPPYfJT6metI+IORkR5G8F900+g==" crossorigin="anonymous"></script>
-    <script>
-        wow = new WOW({
-            boxClass: 'wow',
-            animateClass: 'animated',
-            offset: 100,
-            mobile: true,
-            live: true
-        })
-        wow.init();
-    </script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/overlayscrollbars/1.13.0/css/OverlayScrollbars.min.css" integrity="sha512-pYQcc5kgavar0ah58/O8hw/6Tbo3mWlmQTmvoi1i96cBz7jQYS9as5J+Nfy32rAHY6CgR9ExwnFMcBdGVcKM7g==" crossorigin="anonymous"
     />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/overlayscrollbars/1.13.0/js/OverlayScrollbars.min.js" integrity="sha512-5R3ngaUdvyhXkQkIqTf/k+Noq3phjmrqlUQyQYbgfI34Mzcx7vLIIYTy/K1VMHkL33T709kfh5y6R9Xy/Cbt7Q==" crossorigin="anonymous"></script>
