--- a/GT/index.html
+++ b/GT/index.html
@@ -512,80 +512,96 @@
         <div class="projectBody p-t-5">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-xl-21 offset-xl-3 col-lg-23 offset-lg-1 col-md-19 offset-md-5 col-sm-18 offset-sm-3 col-18 offset-3 m-b-4">
+                    <div class="col-xl-1 offset-xl-1 col-lg-1 offset-lg-1 d-md-block d-none position-relative">
+                        <div class="counter counter_hide">
+                            <div class="counter__inner">
+                                <div class="counter__num h5">01</div>
+                                <div class="counter__num h5">02</div>
+                                <div class="counter__num h5">03</div>
+                                <div class="counter__num h5">04</div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-21 offset-xl-1 col-lg-21 offset-lg-1 col-md-19 offset-md-5 col-sm-18 offset-sm-3 col-18 offset-3 m-b-4">
                         <div class="sliderP">
                             <div class="sliderP__item">
-                               <div class="sliderP__img">
-                                   <img src="img/sliderP/1.jpg" alt="" class="">
-                                   <img src="img/sliderP/2.jpg" alt="" class="">
-                               </div>
-                               <div class="sliderP__descriptionWrap">
-                                <div class="sliderP__description">
-                                    <h4 class="h3">Причалы в посёлке Ижевское</h4>
-                                    <div class="sliderP__text">
-                                        <div class="sliderP__line"></div>
-                                        <p class="p2">В 2000-2002 годах реконструированы причалы № 1,2,3 и построен причал № 6 на базе обеспечения ООО «ЛУКОЙЛ-Калининградморнефть» в поселке Ижевское, Калининградской области. База создавалась для строительства
-                                            и эксплуатации стационарных морских нефтедобывающих платформ в российской Балтике. </p>
-                                        <p class="p2">ГТ ИНСПЕКТ также участвовал в восстановлении антикоррозионного лакокрасочного покрытия незаконченного с советских времен опорного блока ОБ-1, на шельфе Балтийского моря. Осуществлял монтаж и спуск на воду
-                                            блока ОБ-2 платформы Д-6 месторождения Кравцовское. Осуществлял монтаж и спуск на воду блока ОБ-2 платформы Д-6 месторождения Кравцовское.</p>
+                                <div class="sliderP__img">
+                                    <img src="img/sliderP/1.jpg" alt="" class="">
+                                    <img src="img/sliderP/2.jpg" alt="" class="">
+                                </div>
+                                <div class="sliderP__border"></div>
+                                <div class="sliderP__descriptionWrap">
+                                    <div class="sliderP__description">
+                                        <h4 class="h3">Причалы в посёлке Ижевское</h4>
+                                        <div class="sliderP__text">
+                                            <div class="sliderP__line"></div>
+                                            <p class="p2">В 2000-2002 годах реконструированы причалы № 1,2,3 и построен причал № 6 на базе обеспечения ООО «ЛУКОЙЛ-Калининградморнефть» в поселке Ижевское, Калининградской области. База создавалась для строительства и
+                                                эксплуатации стационарных морских нефтедобывающих платформ в российской Балтике. </p>
+                                            <p class="p2">ГТ ИНСПЕКТ также участвовал в восстановлении антикоррозионного лакокрасочного покрытия незаконченного с советских времен опорного блока ОБ-1, на шельфе Балтийского моря. Осуществлял монтаж и спуск на воду блока
+                                                ОБ-2 платформы Д-6 месторождения Кравцовское. Осуществлял монтаж и спуск на воду блока ОБ-2 платформы Д-6 месторождения Кравцовское.</p>
+                                        </div>
                                     </div>
                                 </div>
-                               </div>
                             </div>
                             <div class="sliderP__item">
                                 <div class="sliderP__img">
                                     <img src="img/sliderP/2.jpg" alt="" class="">
                                     <img src="img/sliderP/2.jpg" alt="" class="">
                                 </div>
+                                <div class="sliderP__border"></div>
                                 <div class="sliderP__descriptionWrap">
-                                 <div class="sliderP__description">
-                                     <h4 class="h3">Причалы в посёлке Ижевское</h4>
-                                     <div class="sliderP__text">
-                                         <div class="sliderP__line"></div>
-                                         <p class="p2">В 2000-2002 годах реконструированы причалы № 1,2,3 и построен причал № 6 на базе обеспечения ООО «ЛУКОЙЛ-Калининградморнефть» в поселке Ижевское, Калининградской области. База создавалась для строительства
-                                             и эксплуатации стационарных морских нефтедобывающих платформ в российской Балтике. </p>
-                                         <p class="p2">ГТ ИНСПЕКТ также участвовал в восстановлении антикоррозионного лакокрасочного покрытия незаконченного с советских времен опорного блока ОБ-1, на шельфе Балтийского моря. Осуществлял монтаж и спуск на воду
-                                             блока ОБ-2 платформы Д-6 месторождения Кравцовское. Осуществлял монтаж и спуск на воду блока ОБ-2 платформы Д-6 месторождения Кравцовское.</p>
-                                     </div>
-                                 </div>
+                                    <div class="sliderP__description">
+                                        <h4 class="h3">Причалы в посёлке Ижевское</h4>
+                                        <div class="sliderP__text">
+                                            <div class="sliderP__line"></div>
+                                            <p class="p2">В 2000-2002 годах реконструированы причалы № 1,2,3 и построен причал № 6 на базе обеспечения ООО «ЛУКОЙЛ-Калининградморнефть» в поселке Ижевское, Калининградской области. База создавалась для строительства и
+                                                эксплуатации стационарных морских нефтедобывающих платформ в российской Балтике. </p>
+                                            <p class="p2">ГТ ИНСПЕКТ также участвовал в восстановлении антикоррозионного лакокрасочного покрытия незаконченного с советских времен опорного блока ОБ-1, на шельфе Балтийского моря. Осуществлял монтаж и спуск на воду блока
+                                                ОБ-2 платформы Д-6 месторождения Кравцовское. Осуществлял монтаж и спуск на воду блока ОБ-2 платформы Д-6 месторождения Кравцовское.</p>
+                                        </div>
+
+                                    </div>
                                 </div>
-                             </div>
-                             <div class="sliderP__item">
+                            </div>
+                            <div class="sliderP__item">
                                 <div class="sliderP__img">
                                     <img src="img/sliderP/3.jpg" alt="" class="">
                                     <img src="img/sliderP/2.jpg" alt="" class="">
                                 </div>
+                                <div class="sliderP__border"></div>
                                 <div class="sliderP__descriptionWrap">
-                                 <div class="sliderP__description">
-                                     <h4 class="h3">Причалы в посёлке Ижевское</h4>
-                                     <div class="sliderP__text">
-                                         <div class="sliderP__line"></div>
-                                         <p class="p2">В 2000-2002 годах реконструированы причалы № 1,2,3 и построен причал № 6 на базе обеспечения ООО «ЛУКОЙЛ-Калининградморнефть» в поселке Ижевское, Калининградской области. База создавалась для строительства
-                                             и эксплуатации стационарных морских нефтедобывающих платформ в российской Балтике. </p>
-                                         <p class="p2">ГТ ИНСПЕКТ также участвовал в восстановлении антикоррозионного лакокрасочного покрытия незаконченного с советских времен опорного блока ОБ-1, на шельфе Балтийского моря. Осуществлял монтаж и спуск на воду
-                                             блока ОБ-2 платформы Д-6 месторождения Кравцовское. Осуществлял монтаж и спуск на воду блока ОБ-2 платформы Д-6 месторождения Кравцовское.</p>
-                                     </div>
-                                 </div>
+                                    <div class="sliderP__description">
+                                        <h4 class="h3">Причалы в посёлке Ижевское</h4>
+                                        <div class="sliderP__text">
+                                            <div class="sliderP__line"></div>
+                                            <p class="p2">В 2000-2002 годах реконструированы причалы № 1,2,3 и построен причал № 6 на базе обеспечения ООО «ЛУКОЙЛ-Калининградморнефть» в поселке Ижевское, Калининградской области. База создавалась для строительства и
+                                                эксплуатации стационарных морских нефтедобывающих платформ в российской Балтике. </p>
+                                            <p class="p2">ГТ ИНСПЕКТ также участвовал в восстановлении антикоррозионного лакокрасочного покрытия незаконченного с советских времен опорного блока ОБ-1, на шельфе Балтийского моря. Осуществлял монтаж и спуск на воду блока
+                                                ОБ-2 платформы Д-6 месторождения Кравцовское. Осуществлял монтаж и спуск на воду блока ОБ-2 платформы Д-6 месторождения Кравцовское.</p>
+                                        </div>
+                                    </div>
                                 </div>
-                             </div>
-                             <div class="sliderP__item">
+                            </div>
+                            <div class="sliderP__item">
                                 <div class="sliderP__img">
                                     <img src="img/sliderP/4.jpg" alt="" class="">
                                     <img src="img/sliderP/2.jpg" alt="" class="">
                                 </div>
+                                <div class="sliderP__border"></div>
                                 <div class="sliderP__descriptionWrap">
-                                 <div class="sliderP__description">
-                                     <h4 class="h3">Причалы в посёлке Ижевское</h4>
-                                     <div class="sliderP__text">
-                                         <div class="sliderP__line"></div>
-                                         <p class="p2">В 2000-2002 годах реконструированы причалы № 1,2,3 и построен причал № 6 на базе обеспечения ООО «ЛУКОЙЛ-Калининградморнефть» в поселке Ижевское, Калининградской области. База создавалась для строительства
-                                             и эксплуатации стационарных морских нефтедобывающих платформ в российской Балтике. </p>
-                                         <p class="p2">ГТ ИНСПЕКТ также участвовал в восстановлении антикоррозионного лакокрасочного покрытия незаконченного с советских времен опорного блока ОБ-1, на шельфе Балтийского моря. Осуществлял монтаж и спуск на воду
-                                             блока ОБ-2 платформы Д-6 месторождения Кравцовское. Осуществлял монтаж и спуск на воду блока ОБ-2 платформы Д-6 месторождения Кравцовское.</p>
-                                     </div>
-                                 </div>
+                                    <div class="sliderP__description">
+                                        <h4 class="h3">Причалы в посёлке Ижевское</h4>
+                                        <div class="sliderP__text">
+                                            <div class="sliderP__line"></div>
+                                            <p class="p2">В 2000-2002 годах реконструированы причалы № 1,2,3 и построен причал № 6 на базе обеспечения ООО «ЛУКОЙЛ-Калининградморнефть» в поселке Ижевское, Калининградской области. База создавалась для строительства и
+                                                эксплуатации стационарных морских нефтедобывающих платформ в российской Балтике. </p>
+                                            <p class="p2">ГТ ИНСПЕКТ также участвовал в восстановлении антикоррозионного лакокрасочного покрытия незаконченного с советских времен опорного блока ОБ-1, на шельфе Балтийского моря. Осуществлял монтаж и спуск на воду блока
+                                                ОБ-2 платформы Д-6 месторождения Кравцовское. Осуществлял монтаж и спуск на воду блока ОБ-2 платформы Д-6 месторождения Кравцовское.</p>
+                                        </div>
+                                    </div>
                                 </div>
-                             </div>
+                            </div>
 
 
                         </div>
