add slider mobile

--- a/GT/index.html
+++ b/GT/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <!-- МЕТА -->
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <title>Заголовок</title>
@@ -509,7 +510,7 @@
                 </div>
             </div>
         </div>
-        <div class="projectBody p-t-5">
+        <div class="projectBody p-t-5 d-lg-block d-none">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-xl-1 offset-xl-1 col-lg-1 offset-lg-1 d-md-block d-none position-relative">
@@ -610,6 +611,61 @@
             </div>
         </div>
 
+
+        <div class="projectBodyM d-lg-none">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-xl-21 offset-xl-3 col-lg-21 offset-lg-3 col-md-19 offset-md-5 col-sm-21 offset-sm-3 col-23 offset-1 m-b-4">
+                        <div class="swiper-container">
+                            <div class="sliderPM swiper-wrapper">
+                                <div class="sliderPM__item swiper-slide">
+                                    <div class="sliderPM__img">
+                                        <img src="img/sliderP/1.jpg" alt="" class="">
+                                    </div>
+                                    <div class="sliderPM__descriptionWrap">
+                                        <div class="sliderPM__description">
+                                            <h4 class="h3 m-b-1">Причалы в посёлке Ижевское</h4>
+                                            <p class="p2 m-b-1">В 2000-2002 годах реконструированы причалы № 1,2,3 и построен причал № 6 на базе обеспечения ООО «ЛУКОЙЛ-Калининградморнефть» в поселке Ижевское, Калининградской области. База создавалась для строительства и
+                                                эксплуатации стационарных морских нефтедобывающих платформ в российской Балтике. </p>
+                                            <p class="p2">ГТ ИНСПЕКТ также участвовал в восстановлении антикоррозионного лакокрасочного покрытия незаконченного с советских времен опорного блока ОБ-1, на шельфе Балтийского моря. Осуществлял монтаж и спуск на воду блока
+                                                ОБ-2 платформы Д-6 месторождения Кравцовское. Осуществлял монтаж и спуск на воду блока ОБ-2 платформы Д-6 месторождения Кравцовское.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="sliderPM__item swiper-slide">
+                                    <div class="sliderPM__img">
+                                        <img src="img/sliderP/1.jpg" alt="" class="">
+                                    </div>
+                                    <div class="sliderPM__descriptionWrap">
+                                        <div class="sliderPM__description">
+                                            <h4 class="h3 m-b-1">Причалы в посёлке Ижевское</h4>
+                                            <p class="p2 m-b-1">В 2000-2002 годах реконструированы причалы № 1,2,3 и построен причал № 6 на базе обеспечения ООО «ЛУКОЙЛ-Калининградморнефть» в поселке Ижевское, Калининградской области. База создавалась для строительства и
+                                                эксплуатации стационарных морских нефтедобывающих платформ в российской Балтике. </p>
+                                            <p class="p2">ГТ ИНСПЕКТ также участвовал в восстановлении антикоррозионного лакокрасочного покрытия незаконченного с советских времен опорного блока ОБ-1, на шельфе Балтийского моря. Осуществлял монтаж и спуск на воду блока
+                                                ОБ-2 платформы Д-6 месторождения Кравцовское. Осуществлял монтаж и спуск на воду блока ОБ-2 платформы Д-6 месторождения Кравцовское.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="sliderPM__item swiper-slide">
+                                    <div class="sliderPM__img">
+                                        <img src="img/sliderP/1.jpg" alt="" class="">
+                                    </div>
+                                    <div class="sliderPM__descriptionWrap">
+                                        <div class="sliderPM__description">
+                                            <h4 class="h3 m-b-1">Причалы в посёлке Ижевское</h4>
+                                            <p class="p2 m-b-1">В 2000-2002 годах реконструированы причалы № 1,2,3 и построен причал № 6 на базе обеспечения ООО «ЛУКОЙЛ-Калининградморнефть» в поселке Ижевское, Калининградской области. База создавалась для строительства и
+                                                эксплуатации стационарных морских нефтедобывающих платформ в российской Балтике. </p>
+                                            <p class="p2">ГТ ИНСПЕКТ также участвовал в восстановлении антикоррозионного лакокрасочного покрытия незаконченного с советских времен опорного блока ОБ-1, на шельфе Балтийского моря. Осуществлял монтаж и спуск на воду блока
+                                                ОБ-2 платформы Д-6 месторождения Кравцовское. Осуществлял монтаж и спуск на воду блока ОБ-2 платформы Д-6 месторождения Кравцовское.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <div class="seaBig">
             <img src="img/seaBig.jpg" alt="" class="seaBig__video">
@@ -1142,17 +1198,13 @@
 
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js " integrity="sha512-Eak/29OTpb36LLo2r47IpVzPBLXnAMPAVypbSZiZ4Qkf8p/7S/XRG5xp7OKWPPYfJT6metI+IORkR5G8F900+g==" crossorigin=" anonymous "></script>
-    <!-- <link rel="stylesheet " href="https://cdnjs.cloudflare.com/ajax/libs/overlayscrollbars/1.13.0/css/OverlayScrollbars.min.css " integrity="sha512-pYQcc5kgavar0ah58/O8hw/6Tbo3mWlmQTmvoi1i96cBz7jQYS9as5J+Nfy32rAHY6CgR9ExwnFMcBdGVcKM7g==" crossorigin=" -->
-    anonymous " />
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/overlayscrollbars/1.13.0/js/OverlayScrollbars.min.js " integrity="sha512-5R3ngaUdvyhXkQkIqTf/k+Noq3phjmrqlUQyQYbgfI34Mzcx7vLIIYTy/K1VMHkL33T709kfh5y6R9Xy/Cbt7Q==" crossorigin=" anonymous "></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js " integrity="sha512-HaoDYc3PGduguBWOSToNc0AWGHBi2Y432Ssp3wNIdlOzrunCtB2qq6FrhtPbo+PlbvRbyi86dr5VQx61eg/daQ==" crossorigin=" anonymous "></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/5.4.5/js/swiper.min.js" integrity="sha512-VHsNaV1C4XbgKSc2O0rZDmkUOhMKPg/rIi8abX9qTaVDzVJnrDGHFnLnCnuPmZ3cNi1nQJm+fzJtBbZU9yRCww==" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/@popperjs/core@2 "></script>
     <script src="https://unpkg.com/tippy.js@6 "></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js " integrity="sha512-HaoDYc3PGduguBWOSToNc0AWGHBi2Y432Ssp3wNIdlOzrunCtB2qq6FrhtPbo+PlbvRbyi86dr5VQx61eg/daQ==" crossorigin=" anonymous "></script>
     <script src="js/wheel-indicator.js "></script>
     <script src="js/vanilla-modal.js "></script>
     <script src="js/main.js "></script>
-
-
 </body>
 
 </html>
