--- a/GT/news.html
+++ b/GT/news.html
@@ -8,7 +8,7 @@
     <!-- МЕТА -->
     <link rel="stylesheet" href="css/style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <title>Заголовок</title>
+    <title>GT</title>
 </head>
 
 <body>
@@ -70,20 +70,20 @@
     </header>
 
     <div class="newsTitle">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-xl-22 offset-xl-2 col-lg-22 offset-lg-2 col-md-22 offset-md-2 col-sm-20 offset-sm-4 col-20 offset-4 m-t-5 m-b-2">
-              <h2 class="h6 titleSection">/Новости</h2>
-          </div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xl-22 offset-xl-2 col-lg-22 offset-lg-2 col-md-22 offset-md-2 col-sm-20 offset-sm-4 col-20 offset-4 m-t-5 m-b-2">
+                    <h2 class="h6 titleSection">/Новости</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xl-6 offset-xl-2 col-lg-7 offset-lg-2 col-md-11 offset-md-2 col-sm-16 offset-sm-4 col-18 offset-4 m-b-5">
+                    <p class="p1">
+                        Мы постоянно обновляем информацию, чтобы Вы лучше узнали нас.
+                    </p>
+                </div>
+            </div>
         </div>
-        <div class="row">
-          <div class="col-xl-6 offset-xl-2 col-lg-7 offset-lg-2 col-md-11 offset-md-2 col-sm-16 offset-sm-4 col-18 offset-4 m-b-5">
-              <p class="p1">
-                Мы постоянно обновляем информацию, чтобы Вы лучше узнали нас.
-              </p>
-          </div>
-        </div>
-      </div>
     </div>
     <div class="newsList">
         <div class="container-fluid">
@@ -178,8 +178,8 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-xl-3 offset-xl-3 col-lg-4 offset-lg-2 col-md-9 offset-md-3 col-sm-16 offset-sm-4 col-18 offset-3">
-                <a href="/">    <img src="img/logoW.svg" alt="" class="w-100 h-auto m-b-3">
-                </a>
+                    <a href="/"> <img src="img/logoW.svg" alt="" class="w-100 h-auto m-b-3">
+                    </a>
                 </div>
                 <div class="col-xl-4 offset-xl-5 col-lg-4 offset-lg-5 col-md-10 offset-md-3 col-sm-16 offset-sm-4 col-18 offset-3">
                     <nav class="menuFooter m-b-3">
@@ -207,9 +207,8 @@
                 </div>
                 <div class="col-xl-4 offset-0 col-lg-4 offset-lg-1 col-md-9 offset-md-0 col-sm-16 offset-sm-4 col-18 offset-3">
                     <p class="p2 footer__text">
-                        194354 Россия<br>
-                        Санкт-Петербург<br>
-                        ул. Есенина 5Б-60Н<br>
+                        194354 Россия<br> Санкт-Петербург
+                        <br> ул. Есенина 5Б-60Н<br>
                     </p><br>
                     <a href="tel:+78123373037" class="p2 footer__link">тел.. +7 812 3373037</a>
                     <a href="tel:+78123373030" class="p2 footer__link">факс +7 812 3373030</a>
