Add btn for News

--- a/GT/index.html
+++ b/GT/index.html
@@ -800,7 +800,7 @@
                             Мы постоянно обновляем информацию, чтобы Вы лучше узнали нас.
                         </p>
                     </div>
-                    <div class="col-xl-15 offset-xl-1 col-lg-16 offset-lg-1 col-md-20 offset-md-4 col-sm-16 offset-sm-8 col-20 offset-4 p-b-5">
+                    <div class="col-xl-15 offset-xl-1 col-lg-16 offset-lg-1 col-md-20 offset-md-4 col-sm-16 offset-sm-8 col-20 offset-4">
                         <div class="row">
                             <div class="newsItem col-xl-10 offset-xl-2 col-lg-10 offset-lg-2 col-md-24 offset-md-0 col-sm-24 offset-sm-0 col-24 offset-0 p-t-3 p-b-3">
                                 <div class="">
@@ -880,6 +880,10 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-xl-4 offset-xl-19 col-lg-4 offset-lg-19 col-md-10 offset-md-14 col-sm-20 offset-sm-4 col-20 offset-4 p-b-5">
+                        <a href="" class="btn4">показать ещё</a>
+                    </div>
+
                 </div>
             </div>
         </div>
