--- a/GT/index.html
+++ b/GT/index.html
@@ -1194,6 +1194,7 @@
 
     </div>
     <script src="js/headroom.min.js"></script>
+    <script src="js/pleaserotate_v.js"></script>
     <script src="js/wow.min.js"></script>
     <script src="js/SmoothScroll.min.js"></script>
     <script src="js/swiper.min.js"></script>
