--- a/GT/index.html
+++ b/GT/index.html
@@ -407,12 +407,12 @@
                             <ellipse opacity="0.95" rx="4.35112" ry="4.43772" transform="matrix(-1 9.95714e-10 9.12889e-10 1 765.875 758.434)" />
                         </g>
                         <g fill="#00BDFA" data-tippy-content='<p class="p2 mp">ООО "ГТ Север"</p>' data-target='ООО "ГТ Север"' class="map__point">
-                            <ellipse cx="973.384" cy="637.709" rx="10" ry="10"  fill-opacity="0.3"/>
-                            <ellipse cx="973.377" cy="637.709" rx="5.0763" ry="5.17734"  fill-opacity="0.6"/>
+                            <ellipse cx="973.384" cy="637.709"  fill-opacity="0.3"/>
+                            <ellipse cx="973.377" cy="637.709"  fill-opacity="0.6"/>
                         </g>
                         <g fill="#00BDFA" data-tippy-content='<p class="p2 mp">OOО "ГТ-КАЛИНИНГРАД"</p>' data-target='OOО "ГТ-КАЛИНИНГРАД"' class="map__point">
-                            <ellipse cx="595.826" cy="892.633" rx="10" ry="10" fill-opacity="0.3"/>
-                            <ellipse cx="595.815" cy="892.634" rx="5.0763" ry="5.17734" fill-opacity="0.6"/>
+                            <ellipse cx="595.826" cy="892.633" fill-opacity="0.3"/>
+                            <ellipse cx="595.815" cy="892.634" fill-opacity="0.6"/>
                         </g>
                         <g fill="#00BDFA" data-tippy-content='<p class="p2 mp">Южное отделение<br> OOO "НПФ "ГТ ИНСПЕКТ"</p>' data-target='Южное отделение OOO "НПФ "ГТ ИНСПЕКТ"' class="map__point">
                             <ellipse cx="911.588" cy="1167.83" rx="10" ry="10" fill-opacity="0.3"/>
