--- a/pitbike/index.html
+++ b/pitbike/index.html
@@ -15,17 +15,17 @@
   </head>
   <body>
     <section class="section-main">
-      <div class="container">
+      <div id="#anim" class="container">
         <div class="header">
           <div class="social">
-            <a target="_blank" href="https://vk.com/pitbike.omsk">
+            <!-- <a target="_blank" href="https://vk.com/pitbike.omsk">
               <svg class="social__icon">
                 <use xlink:href="img/sprite.svg#vk"></use></svg
             ></a>
             <a target="_blank" href="https://www.instagram.com/pitbike.omsk/">
               <svg class="social__icon">
                 <use xlink:href="img/sprite.svg#inst"></use></svg
-            ></a>
+            ></a> -->
           </div>
           <a href="tel:+79507921994" class="contact">+7 (950) 792-19-94</a>
         </div>
@@ -41,7 +41,7 @@
       </div>
     </section>
     <div class="video">
-      <video loop muted autoplay poster="video/plane.jpg" class="video__body">
+      <video loop muted autoplay class="video__body">
         <source src="img/video.mp4" type="video/mp4" />
       </video>
     </div>
@@ -266,7 +266,7 @@
             <div class="col2">
               <a href="tel:+79507921994" class="contact">+7 (950) 792-19-94</a>
               <div class="social">
-                <a target="_blank" href="https://vk.com/pitbike.omsk">
+                <!-- <a target="_blank" href="https://vk.com/pitbike.omsk">
                   <svg class="social__icon">
                     <use xlink:href="img/sprite.svg#vk"></use></svg
                 ></a>
@@ -276,7 +276,7 @@
                 >
                   <svg class="social__icon">
                     <use xlink:href="img/sprite.svg#inst"></use></svg
-                ></a>
+                ></a> -->
               </div>
             </div>
             <div class="col2"></div>
@@ -294,6 +294,13 @@
       </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.16.0/TweenMax.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/ScrollMagic.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/plugins/animation.gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.2/plugins/debug.addIndicators.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script> -->
     <script src="js/main.js"></script>
   </body>
 </html>
